HTML и CSS главной страницы

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('normalize.css');
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -7,25 +9,371 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #000;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
+
+.logo_place_header{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 183px;
+  height: 32px;
+  z-index: 3;
+}
+
+.header__title{
+  margin: 0;
+  padding: 0;
+  align-self: center;
+  position: absolute;
+  left: 64px;
+  width: 730px;
+  z-index: 2;
+  line-height: 92px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle{
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 3;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__link{
+  color: #2f80ed;
+}
+
+.header__main-illustration{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+}
+
+.header__square-pic{
   width: 568px;
+  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color: #2f80ed;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.description{
+  margin: 100px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns{
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  width: 80%;
+}
+
+.two-columns__brief{
+  margin: 0;
+  padding: 0;
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph{
+  margin: 0 0 30px;
+  padding: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph:last-of-type{
+  margin: 0;
+}
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.digits{
+  margin: 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section-title{
+  margin: 0;
+  padding: 0;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle{
+  margin: 20px 0;
+  padding: 0;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell{
+  margin: 60px 0 0;
+  width: 250px;
+}
+
+.table__heading{
+  margin: 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text{
+  margin: 20px 0 0;
+  padding: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman{
+  height: 790px;
+  background-image: url('../images/feynman.png');
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  background-color: #f2f2f2;
+  position: relative;
+}
+
+.feynman__title{
+  margin: 0 auto;
+  padding: 100px 0 70px;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle{
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link{
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  right: 40px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.kaufman{
+  margin: 0;
+  padding: 90px 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #1f1f1f;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  overflow: hidden;
+}
+
+.section-title_theme_dark{
+  margin: 0;
+  padding: 0;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark{
+  margin: 20px 0 0;
+  padding:0;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  margin: 0 auto;
+  list-style: none;
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.table__cell_theme_dark {
+  margin: 80px 0 0;
+  width: 200px;
+}
+
+.table__heading_theme_dark {
+  margin: 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text_theme_dark {
+  margin: 20px 0 0;
+  padding: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle{
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: 0;
+}
+
+.footer{
+  min-height: 350px;
+  display: flex;
+  justify-content: center;
+  align-content: stretch;
+  background-color: #1f1f1f;
+  color: white;
+}
+
+.footer__columns{
+  margin: 60px auto 40px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-content: flex-start;
+  list-style: none;
+}
+
+.footer__column_content_copyright{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.logo_place_footer{
+  width: 183px;
+  height: 35px;
+}
+
+
+.footer__author{
+  margin: 18px 0;
+  padding: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+/*.footer__column_content_info{
+  margin: 0;
+  padding: 0;
+}*/
+
+.footer__column_heading{
+  margin: 0;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column_links{
+  margin: 20px 0 16px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__social{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.footer__social-icon{
+  margin: 0 10px 0 0 ;
+  padding: 0;
+  width: 15px;
+  height: 15px;
 }
