--- a/styles/style.css
+++ b/styles/style.css
@@ -358,6 +358,7 @@
 .footer__column_links{
   margin: 20px 0 16px;
   padding: 0;
+  list-style: none;
   display: flex;
   flex-direction: column;
   line-height: 30px;
