--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
   color: #000;
 }
 
@@ -17,6 +17,8 @@
   min-height: 600px;
   max-height: 756px;
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
   position: relative;
   background-color: #f2f2f2;
 }
@@ -32,14 +34,11 @@
 }
 
 .header__title{
-  margin: 0;
+  margin: 0 0 0 64px;
   padding: 0;
-  align-self: center;
-  position: absolute;
-  left: 64px;
   width: 730px;
   z-index: 2;
-  line-height: 92px;
+  line-height: 96px;
   font-size: 102px;
   font-weight: bold;
 }
@@ -58,6 +57,9 @@
 }
 
 .header__link{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
   color: #2f80ed;
 }
 
@@ -118,7 +120,7 @@
   font-weight: normal;
 }
 
-.two-columns__paragraph:last-of-type{
+.two-columns__paragraph:last-child{
   margin: 0;
 }
 
@@ -188,6 +190,8 @@
 }
 
 .feynman{
+  margin: 0;
+  padding: 100px 0 0 0;
   height: 790px;
   background-image: url('../images/feynman.png');
   background-repeat: no-repeat;
@@ -199,7 +203,7 @@
 
 .feynman__title{
   margin: 0 auto;
-  padding: 100px 0 70px;
+  padding: 0 0 70px;
   width: 648px;
   text-align: center;
   line-height: 1.15;
@@ -222,6 +226,7 @@
   position: absolute;
   top: 50%;
   right: 40px;
+  text-decoration: none;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -294,12 +299,17 @@
 }
 
 .kaufman__triangle{
+  margin: 0;
+  padding: 0;
   position: absolute;
   top: 0;
   right: -210px;
+  z-index: 0;
   width: 877px;
   height: 877px;
-  z-index: 0;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .footer{
@@ -333,7 +343,6 @@
   height: 35px;
 }
 
-
 .footer__author{
   margin: 18px 0;
   padding: 0;
@@ -347,7 +356,7 @@
   padding: 0;
 }
 
-.footer__column_heading{
+.footer__column-heading{
   margin: 0;
   padding: 0;
   line-height: 30px;
@@ -355,7 +364,7 @@
   font-weight: bold;
 }
 
-.footer__column_links{
+.footer__column-links{
   margin: 20px 0 16px;
   padding: 0;
   list-style: none;
@@ -366,11 +375,11 @@
   font-weight: normal;
 }
 
-.footer__social{
+.footer_column-link{  
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: flex-start;
+  text-decoration: none;
+  color: white;
 }
 
 .footer__social-icon{
