--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-@import url('normalize.css');
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -375,7 +373,12 @@
   font-weight: normal;
 }
 
-.footer_column-link{  
+.footer__column-item{
+  margin: 0;
+  padding: 0;
+}
+
+.footer__column-link{  
   margin: 0;
   padding: 0;
   text-decoration: none;
