--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  color: white;opacity: 1;
+  color: white;
+  opacity: 1;
   transition: opacity .4s ease;
 }
 
