--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -2,6 +2,7 @@
   margin: 80px auto 0;
   padding: 0;
   width: 1100px;
+  list-style: none;
   display: flex;
   align-items: flex-start;
   justify-content: center;
