--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,10 +1,11 @@
 .video__iframe{
-  margin: 0;
+  margin: 0 20px 0 0;
   padding: 0;
   width: 515px;
   height: 316px;
+  border: none;
 }
 
-.video__iframe:first-child{
-  margin-right: 20px;
+.video__iframe:last-child{
+  margin-right: 0;
 }
