--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,6 +5,7 @@
   font-size: 30px;
   font-weight: normal;
   color: #2f80ed;
+  text-decoration: none;
   opacity: 1;
   transition: opacity .4s ease;
 }
